--- a/index.css
+++ b/index.css
@@ -38,6 +38,24 @@ body {
 	background-color: FireBrick !important;
 }
 
+#start-button {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: MediumSeaGreen;
+	border: none;
+	color: white;
+	padding: 12px 0px;
+	width: 140px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 19px;
+	border: black 4px solid;
+	border-radius: 15px;
+}
+
 #pause-menu button {
 	background-color: MediumSeaGreen;
 	border: none;
