--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+html, body {
+  width:  100%;
+  height: 100%;
+  margin: 0;
+}
+
 body {
 	margin: 0;
 	height: 100vh;
@@ -12,6 +18,45 @@ body {
 
 .invisible {
 	visibility: hidden;
+}
+
+#title {
+	font-family: "Staatliches";
+	font-size: 90px;
+	top: 35%;
+	left: 50%;
+	-webkit-text-stroke: 3px black; /* width and color */
+	transform: translate(-50%, -50%);
+	display: flex;
+}
+
+#title span {
+	padding:0px;
+	margin: 0px;
+}
+
+#title :nth-child(1) {
+	color: FireBrick;
+}
+
+#title :nth-child(2) {
+	color: rgb(216, 148, 0);
+}
+
+#title :nth-child(3) {
+	color: Gold;
+}
+
+#title :nth-child(4) {
+	color: SeaGreen;
+}
+
+#title :nth-child(5) {
+	color: RoyalBlue;
+}
+
+#title :nth-child(6) {
+	color: RebeccaPurple;
 }
 
 #pause-menu,
@@ -60,7 +105,7 @@ body {
 
 #start-button {
 	position: absolute;
-	top: 50%;
+	top: 60%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	background-color: MediumSeaGreen;
